# MathLib

./: .travis.yml  CMakeLists.txt  README.md  conanfile.py  conanfile.txt
include/mathlib/: global.hpp  mathlib.hpp
src/mathlib/: mathlib.cpp
src/tests/: test_functions.cpp
